<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.discitex.nurtaniomobile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.discitex.nurtaniomobile.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news"/>

    <fragment
        android:id="@+id/navigation_statistic"
        android:name="com.discitex.nurtaniomobile.ui.statistic.StatisticFragment"
        android:label="@string/menu_statistic"
        tools:layout="@layout/fragment_statistic"/>

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.discitex.nurtaniomobile.ui.schedule.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.discitex.nurtaniomobile.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile"/>

</navigation>